Finished /api/recipe endpoints